# rag-demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: 01-overview.md  02-architecture.md  03-ingestion.md  04-retrieval.md  05-answering.md  06-evaluation.md  07-configuration.md  README.md
files/: corpus_manifest.json  corpus_manifest.md
scripts/: download_corpus.py
src/rag_demo/: __init__.py  answer.py  app.py  baseline.py  cli.py  config.py  corpus.py  embeddings.py  index.py  ingest.py  retrieve.py  schema.py
src/rag_demo/eval/: __init__.py  extraction.py  judge.py  retrieval_eval.py
tests/: conftest.py  test_baseline_pipeline.py  test_corpus.py  test_embeddings.py  test_index.py  test_retrieve.py  test_schema.py
